notifiers cache map has added